# mcpx

./: .gitignore  README.md  registry.json
.github/workflows/: publish.yml
js/: package-lock.json  package.json
js/src/commands/: add.js  doctor.js  info.js  init.js  list.js  remove.js  search.js
js/src/utils/: config.js  editors.js
js/tests/: config.test.js  editors.test.js  registry.test.js
python/: README.md  pyproject.toml
python/mcpx/: cli.py
python/mcpx/commands/: add.py  doctor.py  info.py  init.py  list.py  remove.py  search.py
python/mcpx/utils/: config.py  editors.py
