[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpx"
version = "0.2.0"
description = "CLI to install and configure MCP servers in any editor. No marketplace. No friction. Just works."
readme = "README.md"
authors = [{ name = "rblez", email = "rblez@proton.me" }]
license = { text = "MIT" }
keywords = [
  "mcp",
  "claude",
  "cursor",
  "ai",
  "cli",
  "model-context-protocol",
  "copilot",
  "windsurf",
  "zed"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
mcpx = "mcpx.cli:app"

[project.urls]
Homepage = "https://github.com/rblez/mcpx"
Repository = "https://github.com/rblez/mcpx"
Issues = "https://github.com/rblez/mcpx/issues"
Changelog = "https://github.com/rblez/mcpx/releases"

[tool.hatch.build.targets.wheel]
packages = ["mcpx"]

[tool.hatch.build.targets.sdist]
include = [
  "/mcpx",
  "/pyproject.toml",
  "/README.md",
  "/../registry.json",
]
